<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CallActivity"
    app:layout_constraintVertical_weight="3"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl2"
        app:layout_constraintVertical_weight="2">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">
                <LinearLayout
                    android:id="@+id/medical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:weightSum="6">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/icons8_hospital"
                        android:layout_weight="2"
                        android:contentDescription="@string/image"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medical_emergency_n_situations"
                        android:layout_weight="3"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/icons8_right"
                        android:layout_weight="1"
                        android:contentDescription="@string/image"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="?colorOnSecondary"
                    android:alpha="0.7"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    />


                <LinearLayout
                    android:id="@+id/fire_wall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="horizontal"
                    android:weightSum="6"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image"
                        android:src="@drawable/icons8_fire_extinguisher_1"
                        android:layout_weight="2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fire_emergency_n_situations"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="3"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/icons8_right"
                        android:contentDescription="@string/image"
                        android:layout_weight="1"/>

                </LinearLayout>



            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/cl1"
        android:layout_marginBottom="100dp">
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:weightSum="3"
            >
            <ImageView
                android:id="@+id/ivAmbulance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:src="@drawable/icons8_ambulance"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/ivFire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_fire_truck"
                android:contentDescription="@string/image"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/ivPolice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_police_car"
                android:contentDescription="@string/image"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintTop_toBottomOf="@id/ll1"
            android:weightSum="3"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ambulance"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/fire_brigade"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/police"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_on_any_one_to_call_in_emergency_situation"
            app:layout_constraintTop_toBottomOf="@id/ll2"
            android:gravity="center"
            android:textSize="11sp"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="?colorOnSecondary"
            android:alpha="0.7"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>