<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/draw_activity"
    android:theme="@style/Theme.AppCompat"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="10dp"
            app:popupTheme="@style/Theme.AppCompat.Light"
            tools:ignore="MissingConstraints">


        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="166dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@string/medi_consult"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.013" />

        <EditText
            android:layout_width="224dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="Enter Your Name"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="22sp"
            android:id="@+id/nametext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.668"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53"
            tools:ignore="Autofill,HardcodedText" />

        <ImageView
            android:layout_width="39dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512"
            app:srcCompat="@drawable/name"
            android:contentDescription="@string/image"/>

        <EditText
            android:layout_width="224dp"
            android:layout_height="49dp"
            android:layout_marginEnd="12dp"
            android:ems="10"
            android:hint="@string/enter_your_age"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="22sp"
            android:id="@+id/agetext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.712"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.628" />

        <ImageView
            android:layout_width="46dp"
            android:layout_height="36dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.626"
            app:srcCompat="@drawable/age"
            android:contentDescription="@string/image"/>

        <ImageButton
            android:id="@+id/enter"
            android:layout_width="44dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.626"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_arrow_forward_black_24dp" />


        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="135dp"
                android:layout_height="43dp"
                android:layout_marginStart="29dp"
                android:buttonTint="#34B7FF"
                android:checked="false"
                android:text="@string/male"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.172"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                app:layout_constraintVertical_bias="0.566" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="145dp"
                android:layout_height="43dp"
                android:buttonTint="#34B7FF"
                android:checked="false"
                android:text="@string/female"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.849"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.566" />
        </RadioGroup>

        <ImageView
            android:layout_width="133dp"
            android:layout_height="286dp"
            android:layout_marginStart="150dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.125"
            app:srcCompat="@drawable/doc"
            android:contentDescription="@string/image"/>

        <ImageView
            android:layout_width="106dp"
            android:elevation="1dp"
            android:layout_height="1.5dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="22dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.257"
            app:srcCompat="@drawable/s1"
            android:contentDescription="@string/image"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.236"
            app:srcCompat="@drawable/apple"
            android:contentDescription="@string/image"/>

        <ImageView
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.154"
            app:srcCompat="@drawable/android1"
            android:contentDescription="@string/image"/>

        <TextView
            android:layout_width="137dp"
            android:layout_height="143dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:contextClickable="false"
            android:textIsSelectable="false"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:saveEnabled="false"
            android:singleLine="false"
            android:text="@string/an_apple_na_day_keeps_ndoctor_away"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.268" />

        <TextView
            android:layout_width="68dp"
            android:layout_height="43dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:text="@string/app"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.338"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.175" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22"
            app:srcCompat="@drawable/q_left"
            android:contentDescription="@string/image"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.362"
            app:srcCompat="@drawable/q_right"
            android:contentDescription="@string/image" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        tools:ignore="MissingConstraints" />


</androidx.drawerlayout.widget.DrawerLayout>